fix(css/styles.css): fixed navbar-item font getting too small

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,15 @@
   font-family: 'josefin_slabregular';
   font-weight: 125;
   font-size: 1.5vw
+}
 
+@media all and (max-width: 800px){
+  .navbar-myitem {
+    color: rgba(255,255,255,0.95);
+    font-family: 'josefin_slabregular';
+    font-weight: 125;
+    font-size: 14px;
+  }
 }
 
 .icon-bar {
